Quick fix for horizontal scrolling

--- a/hero.css
+++ b/hero.css
@@ -5,6 +5,7 @@
   overflow-y: hidden;
   top: -200px;
   margin-bottom: -200px;
+  overflow-x: hidden;
   z-index: 1;
 
   p {
